@@ -58,6 +58,7 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_TEXTOUTLINE,
   GST_TTML_ATTR_ZINDEX,
   GST_TTML_ATTR_LINE_HEIGHT,
+  GST_TTML_ATTR_WRAP_OPTION,
   GST_TTML_ATTR_UNKNOWN
 } GstTTMLAttributeType;
 
@@ -122,6 +123,13 @@ typedef enum _GstTTMLDisplayAlign {
   GST_TTML_DISPLAY_ALIGN_AFTER,
   GST_TTML_DISPLAY_ALIGN_UNKNOWN
 } GstTTMLDisplayAlign;
+
+/* Wrap option */
+typedef enum _GstTTMLWrapOption {
+  GST_TTML_WRAP_OPTION_YES,
+  GST_TTML_WRAP_OPTION_NO,
+  GST_TTML_WRAP_OPTION_UNKNOWN,
+} GstTTMLWrapOption;
 
 G_END_DECLS
 
